--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.12.0
-
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.5.0
+  firebase_auth: ^4.2.6
+  google_nav_bar: ^5.0.6
+  firebase_storage: ^11.0.14
+  file_picker: ^5.2.5
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
