--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.5.0
-  firebase_auth: ^4.2.6
   google_nav_bar: ^5.0.6
   firebase_storage: ^11.0.14
   file_picker: ^5.2.5
   get: ^4.6.5
+  supabase_flutter: ^1.6.2
+  provider: ^6.0.0
+
+  
+
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +68,11 @@ flutter_icons:
 flutter:
 
   assets:
-  - assets/images/
-  
+  - assets/images/create_home.png
+  - assets/images/join_home.png
+  - assets/images/icon.png
+
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
