--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   supabase_flutter: ^1.6.2
   provider: ^6.0.0
   google_fonts: ^4.0.3
+  date_time_picker: ^2.1.0  
+  fluttertoast: ^8.2.1
 
 
 dev_dependencies:
