--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_fonts: ^4.0.3
   date_time_picker: ^2.1.0  
   fluttertoast: ^8.2.1
+  syncfusion_flutter_charts: ^21.1.38
 
 
 dev_dependencies:
