--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   fluttertoast: ^8.2.1
   syncfusion_flutter_charts: ^21.1.38
   image_picker: ^0.8.7+1
+  flutter_form_builder: ^7.8.0
 #
 dev_dependencies:
   flutter_test:
