--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   syncfusion_flutter_charts: ^21.1.38
   image_picker: ^0.8.7+1
   flutter_form_builder: ^7.8.0
+  flutter_local_notifications: ^13.0.0
 #
 dev_dependencies:
   flutter_test:
