--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   image_picker: ^0.8.7+1
   flutter_form_builder: ^7.8.0
   syncfusion_flutter_gauges: ^21.1.39
+  rounded_loading_button: ^2.1.0
 #
 dev_dependencies:
   flutter_test:
