--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ app.*.map.json
 /android/app/release
 
 /lib/*.txt
+linux/flutter/generated_plugin_registrant.cc
+linux/flutter/generated_plugins.cmake
+macos/Flutter/GeneratedPluginRegistrant.swift
+windows/flutter/generated_plugin_registrant.cc
+windows/flutter/generated_plugins.cmake
