--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,10 @@ dependencies:
   flutter_form_builder: ^7.8.0
   syncfusion_flutter_gauges: ^21.1.39
   rounded_loading_button: ^2.1.0
-#
+  photo_view: ^0.12.0
+  http: ^0.13.4
+  image_picker_saver: ^0.1.9
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
