--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   shared_preferences: ^2.1.0
   flutter_local_notifications: ^13.0.0
   intl: ^0.17.0
+  gallery_saver: ^2.3.2
 #
 
   photo_view: ^0.12.0
