--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,9 +57,10 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   intl: ^0.17.0
   gallery_saver: ^2.3.2
-#
+  dio: ^5.1.1
 
   photo_view: ^0.12.0
+  image_gallery_saver: ^1.7.1
   # http: ^0.13.4
   # image_picker_saver: ^0.1.9
   
